ADD maximum_reservations_per_user
